--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@google-cloud/vision": "^4.0.2",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.39.3",
     "expo": "52.0.33",
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.5",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
+    "expo-image-manipulator": "^11.8.0",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "4.0.17",
