--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.5",
+    "expo-device": "^7.0.3",
     "expo-file-system": "~16.0.8",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
@@ -30,6 +31,7 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-location": "^18.0.10",
+    "expo-notifications": "^0.29.14",
     "expo-router": "4.0.17",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "^2.0.1",
