--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.23.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
