--- a/app.json
+++ b/app.json
@@ -1,33 +1,36 @@
 {
-	"expo": {
-		"name": "leafly",
-		"slug": "leafly",
-		"version": "1.0.0",
-		"orientation": "portrait",
-		"icon": "./assets/images/icon.png",
-		"scheme": "myapp",
-		"userInterfaceStyle": "automatic",
-		"newArchEnabled": true,
-		"ios": {
-			"supportsTablet": true
-		},
-		"web": {
-			"bundler": "metro",
-			"output": "single",
-			"favicon": "./assets/images/favicon.png"
-		},
-		"plugins": ["expo-router"],
-		"experiments": {
-			"typedRoutes": true
-		},
-		"extra": {
-			"router": {
-				"origin": false
-			},
-			"eas": {
-				"projectId": "9d20e023-8b75-45dd-8619-4ad0ba3aac72"
-			}
-		},
-		"owner": "nathan-carter"
-	}
+  "expo": {
+    "name": "leafly",
+    "slug": "leafly",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "myapp",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "ios": {
+      "supportsTablet": true
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "single",
+      "favicon": "./assets/images/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ],
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "9d20e023-8b75-45dd-8619-4ad0ba3aac72"
+      }
+    },
+    "owner": "nathan-carter"
+  }
 }
