--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@expo-google-fonts/quicksand": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@google-cloud/vision": "^4.0.2",
@@ -24,6 +25,7 @@
     "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.5",
     "expo-device": "^7.0.3",
+    "expo-document-picker": "^13.0.3",
     "expo-file-system": "~16.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
@@ -45,6 +47,7 @@
     "react-native": "0.76.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.23.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
@@ -57,6 +60,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-class-static-block": "^7.21.0",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   }
