--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.11.1",
