--- a/app.json
+++ b/app.json
@@ -19,7 +19,10 @@
 			"bundleIdentifier": "com.viralreach.leafly",
 			"infoPlist": {
 				"ITSAppUsesNonExemptEncryption": false,
-				"UIViewControllerBasedStatusBarAppearance": false
+				"UIViewControllerBasedStatusBarAppearance": false,
+				"NSLocationWhenInUseUsageDescription": "This app requires access to your location when open.",
+				"NSLocationAlwaysAndWhenInUseUsageDescription": "This app requires access to your location even when closed.",
+				"NSLocationAlwaysUsageDescription": "This app requires access to your location when open."
 			}
 		},
 		"android": {
