--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "expo": "52.0.33",
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.18",
-    "expo-constants": "^17.0.5",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-device": "^7.0.3",
     "expo-document-picker": "^13.0.3",
     "expo-file-system": "~16.0.8",
@@ -59,7 +60,7 @@
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
     "unique-names-generator": "^4.7.1",
-    "expo-dev-client": "~5.0.20"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
