--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
 		"ios": {
 			"usesAppleSignIn": true,
 			"supportsTablet": true,
-			"bundleIdentifier": "com.viralreach.leafly",
+			"bundleIdentifier": "com.viralreach.florai",
 			"infoPlist": {
 				"UIBackgroundModes": ["location", "fetch", "remote-notification"],
 				"ITSAppUsesNonExemptEncryption": false,
@@ -32,9 +32,9 @@
 				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#ffffff"
 			},
-			"package": "com.viralreach.leafly"
+			"package": "com.viralreach.florai"
 		},
-		"plugins": ["expo-router", "expo-font"],
+		"plugins": ["expo-router", "expo-font", "expo-apple-authentication"],
 		"experiments": {
 			"typedRoutes": true
 		},
