--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-community/slider": "^4.5.6",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.3",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "52.0.33",
+    "date-fns": "^4.1.0",
+    "expo": "^52.0.46",
+    "expo-apple-authentication": "^7.2.4",
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.8",
@@ -34,6 +37,7 @@
     "expo-file-system": "~16.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
+    "expo-image": "~2.0.7",
     "expo-image-manipulator": "^11.8.0",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "^14.0.2",
@@ -56,6 +60,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-purchases-ui": "^8.10.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
@@ -65,8 +70,7 @@
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
     "unique-names-generator": "^4.7.1",
-    "uuid": "^11.1.0",
-    "expo-image": "~2.0.7"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
