--- a/app.json
+++ b/app.json
@@ -33,7 +33,25 @@
 			},
 			"package": "com.viralreach.florai"
 		},
-		"plugins": ["expo-router", "expo-font", "expo-apple-authentication"],
+		"plugins": [
+			"expo-router",
+			"expo-font",
+			"expo-apple-authentication",
+			"expo-file-system",
+			"@react-native-google-signin/google-signin",
+			[
+				"expo-build-properties",
+				{
+					"android": {
+						"compileSdkVersion": 35,
+						"targetSdkVersion": 34,
+						"buildToolsVersion": "35.0.0",
+						"ndkVersion": "26.1.10909125",
+						"minSdkVersion": 24
+					}
+				}
+			]
+		],
 		"experiments": {
 			"typedRoutes": true
 		},
