--- a/package.json
+++ b/package.json
@@ -1,86 +1,87 @@
 {
-	"name": "bolt-expo-starter",
-	"main": "expo-router/entry",
-	"version": "1.0.0",
-	"private": true,
-	"scripts": {
-		"dev": "EXPO_NO_TELEMETRY=1 expo start",
-		"build:web": "expo export --platform web",
-		"lint": "expo lint",
-		"android": "expo run:android",
-		"ios": "expo run:ios"
-	},
-	"dependencies": {
-		"@aws-sdk/client-s3": "^3.787.0",
-		"@expo-google-fonts/quicksand": "^0.3.0",
-		"@expo/vector-icons": "^14.0.2",
-		"@google-cloud/vision": "^4.0.2",
-		"@lucide/lab": "^0.1.2",
-		"@react-native-async-storage/async-storage": "1.21.0",
-		"@react-native-community/datetimepicker": "^8.3.0",
-		"@react-native-community/netinfo": "^11.3.1",
-		"@react-native-community/slider": "^4.5.6",
-		"@react-native-google-signin/google-signin": "^14.0.1",
-		"@react-navigation/bottom-tabs": "^7.2.0",
-		"@react-navigation/native": "^7.0.14",
-		"@supabase/supabase-js": "^2.39.3",
-		"base64-arraybuffer": "^1.0.2",
-		"bplist-creator": "^0.1.1",
-		"date-fns": "^4.1.0",
-		"expo": "^52.0.46",
-		"expo-apple-authentication": "^7.2.4",
-		"expo-blur": "^14.0.3",
-		"expo-camera": "^16.0.18",
-		"expo-constants": "~17.0.8",
-		"expo-dev-client": "~5.0.20",
-		"expo-device": "^7.0.3",
-		"expo-document-picker": "^13.0.3",
-		"expo-file-system": "~16.0.8",
-		"expo-font": "~13.0.4",
-		"expo-haptics": "^14.0.1",
-		"expo-image": "~2.0.7",
-		"expo-image-manipulator": "^11.8.0",
-		"expo-image-picker": "~14.7.1",
-		"expo-linear-gradient": "^14.0.2",
-		"expo-linking": "^7.0.5",
-		"expo-location": "^18.0.10",
-		"expo-notifications": "^0.29.14",
-		"expo-router": "4.0.17",
-		"expo-splash-screen": "^0.29.21",
-		"expo-status-bar": "^2.0.1",
-		"expo-symbols": "^0.2.2",
-		"expo-system-ui": "^4.0.7",
-		"expo-video": "^2.1.9",
-		"expo-web-browser": "^14.0.2",
-		"lucide-react-native": "^0.475.0",
-		"mixpanel-react-native": "^3.0.9",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-native": "0.76.6",
-		"react-native-gesture-handler": "^2.23.0",
-		"react-native-get-random-values": "^1.11.0",
-		"react-native-image-viewing": "^0.2.2",
-		"react-native-modal": "^14.0.0-rc.1",
-		"react-native-purchases-ui": "^8.10.1",
-		"react-native-reanimated": "^3.16.7",
-		"react-native-reanimated-carousel": "^4.0.2",
-		"react-native-safe-area-context": "4.12.0",
-		"react-native-screens": "^4.4.0",
-		"react-native-svg": "^15.11.1",
-		"react-native-url-polyfill": "^2.0.0",
-		"react-native-web": "^0.19.13",
-		"react-native-webview": "13.12.5",
-		"unique-names-generator": "^4.7.1",
-		"uuid": "^11.1.0"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.25.2",
-		"@babel/plugin-proposal-class-static-block": "^7.21.0",
-		"@react-native-community/cli": "18.0.0",
-		"@react-native-community/cli-platform-android": "17.0.0",
-		"@react-native-community/cli-platform-ios": "17.0.0",
-		"@types/react": "~18.3.12",
-		"install-expo-modules": "^0.12.6",
-		"typescript": "^5.3.3"
-	}
+  "name": "bolt-expo-starter",
+  "main": "expo-router/entry",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "build:web": "expo export --platform web",
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@expo-google-fonts/quicksand": "^0.3.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@google-cloud/vision": "^4.0.2",
+    "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-community/slider": "^4.5.6",
+    "@react-native-google-signin/google-signin": "^14.0.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.39.3",
+    "base64-arraybuffer": "^1.0.2",
+    "bplist-creator": "^0.1.1",
+    "date-fns": "^4.1.0",
+    "expo": "^52.0.46",
+    "expo-apple-authentication": "^7.2.4",
+    "expo-blur": "^14.0.3",
+    "expo-camera": "^16.0.18",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-device": "^7.0.3",
+    "expo-document-picker": "^13.0.3",
+    "expo-file-system": "~16.0.8",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "^14.0.1",
+    "expo-image": "~2.0.7",
+    "expo-image-manipulator": "^11.8.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "^14.0.2",
+    "expo-linking": "^7.0.5",
+    "expo-location": "^18.0.10",
+    "expo-notifications": "^0.29.14",
+    "expo-router": "4.0.17",
+    "expo-splash-screen": "^0.29.21",
+    "expo-status-bar": "^2.0.1",
+    "expo-symbols": "^0.2.2",
+    "expo-system-ui": "^4.0.7",
+    "expo-video": "^2.1.9",
+    "expo-web-browser": "^14.0.2",
+    "lucide-react-native": "^0.475.0",
+    "mixpanel-react-native": "^3.0.9",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.23.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-purchases-ui": "^8.10.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.19.13",
+    "react-native-webview": "13.12.5",
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^11.1.0",
+    "expo-build-properties": "~0.13.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-class-static-block": "^7.21.0",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "17.0.0",
+    "@react-native-community/cli-platform-ios": "17.0.0",
+    "@types/react": "~18.3.12",
+    "install-expo-modules": "^0.12.6",
+    "typescript": "^5.3.3"
+  }
 }
