Updates min and target SDK versions
Updates the minimum and target SDK versions to be sourced from `gradle.properties` instead of being hardcoded in `build.gradle`. This change promotes consistency and simplifies SDK version management across the project.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,7 +81,6 @@ def enableProguardInReleaseBuilds = (findProperty('android.enableProguardInRelea
 def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
-    
     ndkVersion rootProject.ext.ndkVersion
 
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -90,12 +89,11 @@ android {
     namespace 'com.viralreach.florai'
     defaultConfig {
         applicationId 'com.viralreach.florai'
-        minSdkVersion 34
-        targetSdkVersion 34
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
     }
-    
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
