--- a/app.json
+++ b/app.json
@@ -1,56 +1,61 @@
 {
-	"expo": {
-		"name": "florai",
-		"slug": "florai",
-		"version": "1.0.0",
-		"orientation": "portrait",
-		"icon": "./assets/images/icon.png",
-		"scheme": "myapp",
-		"userInterfaceStyle": "automatic",
-		"newArchEnabled": true,
-		"web": {
-			"bundler": "metro",
-			"output": "single",
-			"favicon": "./assets/images/favicon.png"
-		},
-		"ios": {
-			"usesAppleSignIn": true,
-			"supportsTablet": true,
-			"bundleIdentifier": "com.viralreach.florai",
-			"infoPlist": {
-				"UIBackgroundModes": ["location", "fetch", "remote-notification"],
-				"ITSAppUsesNonExemptEncryption": false,
-				"UIViewControllerBasedStatusBarAppearance": false,
-				"NSLocationWhenInUseUsageDescription": "This app requires access to your location when open.",
-				"NSLocationAlwaysAndWhenInUseUsageDescription": "This app requires access to your location even when closed.",
-				"NSLocationAlwaysUsageDescription": "This app requires access to your location when open."
-			}
-		},
-		"android": {
-			"adaptiveIcon": {
-				"foregroundImage": "./assets/adaptive-icon.png",
-				"backgroundColor": "#ffffff"
-			},
-			"package": "com.viralreach.florai"
-		},
-		"plugins": [
-			"expo-router",
-			"expo-font",
-			"expo-apple-authentication",
-			"expo-file-system",
-			"@react-native-google-signin/google-signin"
-		],
-		"experiments": {
-			"typedRoutes": true
-		},
-		"extra": {
-			"router": {
-				"origin": false
-			},
-			"eas": {
-				"projectId": "7f15a26e-03da-4a38-8500-eab6a42a9b91"
-			}
-		},
-		"owner": "nathan-carter"
-	}
+  "expo": {
+    "name": "florai",
+    "slug": "florai",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "myapp",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "web": {
+      "bundler": "metro",
+      "output": "single",
+      "favicon": "./assets/images/favicon.png"
+    },
+    "ios": {
+      "usesAppleSignIn": true,
+      "supportsTablet": true,
+      "bundleIdentifier": "com.viralreach.florai",
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "location",
+          "fetch",
+          "remote-notification"
+        ],
+        "ITSAppUsesNonExemptEncryption": false,
+        "UIViewControllerBasedStatusBarAppearance": false,
+        "NSLocationWhenInUseUsageDescription": "This app requires access to your location when open.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "This app requires access to your location even when closed.",
+        "NSLocationAlwaysUsageDescription": "This app requires access to your location when open."
+      }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.viralreach.florai"
+    },
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-apple-authentication",
+      "expo-file-system",
+      "@react-native-google-signin/google-signin",
+      "expo-video"
+    ],
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "7f15a26e-03da-4a38-8500-eab6a42a9b91"
+      }
+    },
+    "owner": "nathan-carter"
+  }
 }
