--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
-    "expo-modules-core": "^2.3.13",
+    "expo-modules-core": "~2.2.3",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.21",
     "expo-splash-screen": "~0.29.24",
