--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,10 +18,14 @@ buildscript {
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+        classpath("expo:expo-gradle-plugin:52.0.46")
+
     }
 }
 
 apply plugin: "com.facebook.react.rootproject"
+apply plugin: 'expo-root-project'
+
 
 allprojects {
     repositories {
