--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-image-viewing": "~0.2.2",
     "react-native-modal": "~14.0.0-rc.1",
+    "react-native-purchases": "^8.10.1",
     "react-native-purchases-ui": "~8.10.1",
     "react-native-reanimated": "~3.16.7",
     "react-native-reanimated-carousel": "~4.0.2",
